fix: Generate javadoc with project's dependency.